--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
 			<div class="row w-100">
-				<div class="col-12 collapse navbar-collapse " id="topmenu">
+				<div class="col-12 navbar-collapse " id="topmenu">
 					<ul class="d-flex justify-content-center w-100">
 			<li><a href="/catalog/">Каталог</a></li>
 				<li><a href="/buy/">Где купить</a></li>
